Updated Piano Page
Updated Piano Page which now includes the first exemplar product.

--- a/pianos.html
+++ b/pianos.html
@@ -61,6 +61,18 @@
               </div>
             </div>
         </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+                <div id="centre_heading"><h2>Please Contact us for avaliability and a test time</h2></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <p></p>
+            </div>
+          </div>
+      </div>
 
         <div class="container-fluid">
             <div class="row">
@@ -69,6 +81,7 @@
                         <img class="card-img-top" src="images/pianos/yahama_u2h.jpg" alt="Yahama U2H">
                         <div class="card-body">
                             <h2>Yahama UH2</h2>
+                            <h3>$26,500</h3>
                         </div>
                     </div>
                 </div>
@@ -81,6 +94,34 @@
                         <tr>
                             <td>Number of Keys</td>
                             <td>88 Keys</td>
+                        </tr>
+                        <tr>
+                          <td>Colour</td>
+                          <td>Black</td>
+                        </tr>
+                        <tr>
+                          <td>Dimensions</td>
+                          <td>WxHxD 58x55x22</td>
+                        </tr>
+                        <tr>
+                          <td>Condition</td>
+                          <td>Brand New</td>
+                        </tr>
+                        <tr>
+                          <td>Number of Pedals</td>
+                          <td>3 (Dolce Pedal (For fine and quiet playing), Middle Pedal (To soften the sound when practicing), Sustain Pedal (To hold notes for longer)</td>
+                        </tr>
+                        <tr>
+                          <td>Description</td>
+                          <td>Balanced Sound and rich volume which combine to bring you musical enjoyment</td>
+                        </tr>
+                        <tr>
+                          <td>Includes</td>
+                          <td>Black Stool, and castor cups</td>
+                        </tr>
+                        <tr>
+                          <td>Rating</td>
+                          <td><span class="badge badge-pill badge-success">85</span></td>
                         </tr>
                     </table>
                 </div>
