Updated Guitar Page
Updated Guitar Page to include guitar amp product

--- a/guitars.html
+++ b/guitars.html
@@ -450,6 +450,59 @@
   <div class="row">
       <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
           <div class="card-2">
+              <img class="card-img-top" src="images/guitars/fender_champion_100.jpg" alt="Fender Champion 100">
+              <div class="card-body">
+                  <h2>Fender Champion 100 - 100W 2X12 Combo Amp with FX</h2>
+                  <h3>$4,000</h3>
+              </div>
+          </div>
+      </div>
+      <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+          <table class="table table-hover">
+              <tr>
+                  <td>Brand</td>
+                  <td>Fender</td>
+              </tr>
+              <tr>
+                  <td>Number of Inputs</td>
+                  <td>2: Normal and Footswitch</td>
+              </tr>
+              <tr>
+                <td>Colour</td>
+                <td>Black</td>
+              </tr>
+              <tr>
+                <td>Condition</td>
+                <td>Brand New</td>
+              </tr>
+              <tr>
+                <td>Outputs</td>
+                <td>2x Guitar Jack Output</td>
+              </tr>
+              <tr>
+                <td>Volume and Tone Controls</td>
+                <td>1x Volume, Bass, Treble, FX Level, FX Select, Gain, Volume 2 etc.</td>
+              </tr>
+              <tr>
+                <td>Description</td>
+                <td>The 100W, dual-channel Champion 100 features two 12" Special Design speakers, with great amp voices and effects that make it easy to dial up just the right sound — from jazz to country, blues to metal and more. It features two footswitchable independent channels: channel one delivers classic Fender clean tone based on amps like the Twin Reverb, and channel two has selectable amp voicing, including Blackface, British, Metal, Jazz and Tweed, for a wide array of tonal variety. Each channel offers selectable FX, including delay, chorus, reverb and more.</td>
+              </tr>
+              <tr>
+                <td>Includes</td>
+                <td>Power Cord, Guitar Lead</td>
+              </tr>
+              <tr>
+                <td>Rating</td>
+                <td><span class="badge badge-pill badge-success">90/span></td>
+              </tr>
+          </table>
+      </div>
+  </div>
+</div>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="card-2">
               <img class="card-img-top" src="images/guitars/aria_lil_aria_tobacco.jpg" alt="Aria Lil Aria Tobacco Sunburst Travel Size Guitar">
               <div class="card-body">
                   <h2>Aria Lil Aria 151 Satin Tobacco Sunburst Travel Size Steel String Accoustice Guitar (Little)</h2>
@@ -498,6 +551,7 @@
           </table>
       </div>
   </div>
+</div>
 </div>
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         
