Updated Bass Page
Updated Bass Page to include all the bass products

--- a/basses.html
+++ b/basses.html
@@ -55,21 +55,289 @@
         </nav>
 
         <div class="container-fluid">
-            <div class="row">
-              <div class="col-12">
-                  <h2>Sub Heading</h2>
-                    <h3>Sub Heading</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna sem, fringilla sit amet dui quis, sodales sollicitudin ipsum. Nunc feugiat blandit neque, quis molestie quam imperdiet at. Pellentesque varius laoreet imperdiet. Donec suscipit accumsan dui, id imperdiet nulla eleifend vel. Nullam aliquam est in cursus faucibus. Etiam eu porttitor justo. Suspendisse iaculis imperdiet risus eget semper. Nulla facilisi.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Suspendisse vitae ex non dui sollicitudin elementum. Nunc nec lacus eget purus iaculis porta. In hac habitasse platea dictumst. Nunc eget iaculis turpis. Curabitur elementum lacus vitae nunc vulputate, eu suscipit velit ullamcorper. Vestibulum in mauris pharetra, hendrerit erat in, molestie neque. In hac habitasse platea dictumst. Sed eu felis nec odio luctus pulvinar et vel erat. Etiam id lacus a quam pretium porta ut porttitor elit.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Donec sodales leo in volutpat auctor. Sed non egestas metus. Aliquam mollis placerat lectus, a sollicitudin odio imperdiet elementum. Cras feugiat cursus finibus. In luctus lectus quis tellus ultrices, ut semper purus commodo. Nullam tincidunt, erat nec sodales condimentum, magna neque ultrices ipsum, id ullamcorper orci lacus in lectus. Vivamus ut neque nisi. Fusce vel tempor eros. Suspendisse tempor ornare convallis. Mauris tellus lorem, consequat id felis nec, suscipit porta arcu. Aliquam pretium lobortis dolor, at hendrerit ligula facilisis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Quisque sit amet egestas odio. Integer bibendum ornare elementum. Etiam placerat tempor lorem sed congue. Sed purus magna, rutrum id justo eu, facilisis ultrices elit. Sed fermentum nisl in ipsum posuere, quis sagittis neque sagittis. Sed volutpat lacus ut lectus vulputate, non efficitur purus efficitur. Curabitur eget nulla ac urna eleifend faucibus ac eget risus. Duis quis arcu eget elit aliquam cursus non in odio. Mauris vulputate dolor diam, quis vestibulum sem malesuada non. Etiam eget nisl ex. Nulla nec ultricies magna. Maecenas blandit elit ac diam lacinia semper. Curabitur scelerisque felis vitae mi iaculis bibendum. Integer lacinia pharetra consectetur. Duis interdum, felis vel maximus sodales, quam metus maximus turpis, sit amet aliquet mi ex eget est. Nullam accumsan odio justo, feugiat consequat magna scelerisque ac.</p>
-                    <h3>Sub Heading</h3>
-                    <p>Integer id egestas tellus, vel sollicitudin nulla. Duis eu nibh imperdiet, convallis nulla ac, porttitor erat. Pellentesque convallis orci sit amet nisl congue, sed fringilla quam efficitur. Pellentesque turpis purus, fermentum sed viverra non, consectetur eu urna. Donec laoreet purus ex, a vestibulum turpis placerat a. Etiam interdum urna in enim dignissim accumsan. Suspendisse a velit rhoncus, pulvinar ex sit amet, ultrices odio.</p>
-              </div>
+          <div class="row">
+            <div class="col-12">
+                <div id="centre_heading"><h1>Basses</h1></div>
             </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+                <div id="centre_heading"><h2>Please Contact us for avaliability and a test time</h2></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <p></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                  <div class="card-2">
+                      <img class="card-img-top" src="images/basses/fender_bass_amp.jpg" alt="Fender Bass Amp">
+                      <div class="card-body">
+                          <h2>Fender Bass Amp - 20B</h2>
+                          <h3>$950.00</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                  <table class="table table-hover">
+                      <tr>
+                          <td>Brand</td>
+                          <td>Fender</td>
+                      </tr>
+                      <tr>
+                          <td>Number of Inputs</td>
+                          <td>1: Normal</td>
+                      </tr>
+                      <tr>
+                        <td>Colour</td>
+                        <td>Black</td>
+                      </tr>
+                      <tr>
+                        <td>Condition</td>
+                        <td>Brand New</td>
+                      </tr>
+                      <tr>
+                        <td>Outputs</td>
+                        <td>None</td>
+                      </tr>
+                      <tr>
+                        <td>Volume and Tone Controls</td>
+                        <td>1x Master Volume, Bass, Treble, Gain</td>
+                      </tr>
+                      <tr>
+                        <td>Description</td>
+                        <td>The Fender 20B is a perfect amp for beginners on the bass with the simple volume controls that allow you to play wherever you go thanks to the small size. It also has 1 8" horn speaker in the middle which allows you to turn up the sound to a really high level.</td>
+                      </tr>
+                      <tr>
+                        <td>Includes</td>
+                        <td>Power Cord, Guitar Lead</td>
+                      </tr>
+                      <tr>
+                        <td>Rating</td>
+                        <td><span class="badge badge-pill badge-success">90</span></td>
+                      </tr>
+                  </table>
+              </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                  <div class="card-2">
+                      <img class="card-img-top" src="images/basses/fender_player_jazz.jpg" alt="Fender Player Jazz Electric Bass">
+                      <div class="card-body">
+                          <h2>"Fender Player Jazz V Electric Bass Guitar, Pau Ferro, 3-color Sunburst</h2>
+                          <h3>$1,500</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                  <table class="table table-hover">
+                      <tr>
+                          <td>Class of Bass</td>
+                          <td>Bass Guitars</td>
+                      </tr>
+                      <tr>
+                          <td>Number of Strings</td>
+                          <td>5 Strings</td>
+                      </tr>
+                      <tr>
+                        <td>Colour</td>
+                        <td>3 Colour Tobacco Sunburst</td>
+                      </tr>
+                      <tr>
+                        <td>Condition</td>
+                        <td>Brand New</td>
+                      </tr>
+                      <tr>
+                        <td>Outputs</td>
+                        <td>1x Guitar Jack Output</td>
+                      </tr>
+                      <tr>
+                        <td>Volume and Tone Controls</td>
+                        <td>1x Volume (Middle Pickup), Volume (Bridge Pickup), Master Tone</td>
+                      </tr>
+                      <tr>
+                        <td>Description</td>
+                        <td>With its dual single-coil pickups and smooth playing feel, the Player Jazz Bass V is an inspiring instrument with classic, elevated style and authentic Fender bass tone. It's powerful, rumbling sound is punchy and tight; a growling voice that's matched with fast, smooth playing feel for a shot of creative inspiration. Ready for action in the studio or on the stage, the Player Jazz Bass V can take anything you can think of-and everything you haven't yet. Respecting our heritage while maintaining our innovative spirit, the two growling Player Series single-coil pickups are packed with legendary Fender bass tone, turned up to 11 for modern ears.</td>
+                      </tr>
+                      <tr>
+                        <td>Includes</td>
+                        <td>Strap</td>
+                      </tr>
+                      <tr>
+                        <td>Rating</td>
+                        <td><span class="badge badge-pill badge-success">95</span></td>
+                      </tr>
+                  </table>
+              </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                  <div class="card-2">
+                      <img class="card-img-top" src="images/basses/ibanez_talman_bass.jpg" alt="Ibanez Talman Bass">
+                      <div class="card-body">
+                          <h2>Ibanez Talman Bass Standard Electric Bass Guitar, Maple Fretboard, Mustard Yellow Flat</h2>
+                          <h3>$1,000</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                  <table class="table table-hover">
+                      <tr>
+                          <td>Class of Bass</td>
+                          <td>Bass Guitars</td>
+                      </tr>
+                      <tr>
+                          <td>Number of Strings</td>
+                          <td>4 Strings</td>
+                      </tr>
+                      <tr>
+                        <td>Colour</td>
+                        <td>Mustard Yellow Flat and Maple</td>
+                      </tr>
+                      <tr>
+                        <td>Condition</td>
+                        <td>Brand New</td>
+                      </tr>
+                      <tr>
+                        <td>Outputs</td>
+                        <td>1x Guitar Jack Output</td>
+                      </tr>
+                      <tr>
+                        <td>Volume and Tone Controls</td>
+                        <td>1x Trebleboost/cut-control, Bassboost/cut-control</td>
+                      </tr>
+                      <tr>
+                        <td>Description</td>
+                        <td>The Perfect beginner bass, the Ibanez Talman Bass is a mustard yellow color and has two control knobs for treble boost and bass boost. This is the simple 4 string bass which is excellent for learners when learning about music theory, performance and group work. 9V battery is located in the back of the bass to help activate the EQ controls. This bass can go into the extreme frequencys so you can get the aquired sound over a variety of genres. Is a bass which is not to heavy and is perfect for playing at small time gigs.</td>
+                      </tr>
+                      <tr>
+                        <td>Includes</td>
+                        <td>Strap</td>
+                      </tr>
+                      <tr>
+                        <td>Rating</td>
+                        <td><span class="badge badge-pill badge-success">85</span></td>
+                      </tr>
+                  </table>
+              </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                  <div class="card-2">
+                      <img class="card-img-top" src="images/basses/yamaha_trbx174.jpg" alt="Yamaha TRBX174 Electric Bass Guitar">
+                      <div class="card-body">
+                          <h2>Yamaha TRBX174 4-String Electric Bass Guitar</h2>
+                          <h3>$1,800</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                  <table class="table table-hover">
+                      <tr>
+                          <td>Class of Bass</td>
+                          <td>Bass Guitars</td>
+                      </tr>
+                      <tr>
+                          <td>Number of Strings</td>
+                          <td>4 Strings</td>
+                      </tr>
+                      <tr>
+                        <td>Colour</td>
+                        <td>Black and Maple</td>
+                      </tr>
+                      <tr>
+                        <td>Condition</td>
+                        <td>Brand New</td>
+                      </tr>
+                      <tr>
+                        <td>Outputs</td>
+                        <td>1x Guitar Jack Output</td>
+                      </tr>
+                      <tr>
+                        <td>Volume and Tone Controls</td>
+                        <td>1x Volume, Master Tone</td>
+                      </tr>
+                      <tr>
+                        <td>Description</td>
+                        <td>The Yamaha TRBX174 electric bass is the latest addition to the Yamaha TRB series of electric basses. Quality materials combined with modern manufacturing techniques produce an affordable and very playable electric bass that surpasses anything in its class. Its the perfect bass for those which have advanced through the levels from intermidate stages to advanced stages. Perfect for those who wish to go around to different competitions or gigs. Has the traditional set up of volume and tone and has a glossy black color.</td>
+                      </tr>
+                      <tr>
+                        <td>Includes</td>
+                        <td>Strap</td>
+                      </tr>
+                      <tr>
+                        <td>Rating</td>
+                        <td><span class="badge badge-pill badge-success">97</span></td>
+                      </tr>
+                  </table>
+              </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                  <div class="card-2">
+                      <img class="card-img-top" src="images/basses/eastman_bass_vb105.jpg" alt="Eastman Double bass VB105">
+                      <div class="card-body">
+                          <h2>Andreas Eastman VB105</h2>
+                          <h3>$1,800</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 col-xs-12 col-sm-6 col-md-8 col-lg-8">
+                  <table class="table table-hover">
+                      <tr>
+                          <td>Class of Bass</td>
+                          <td>Double Bass</td>
+                      </tr>
+                      <tr>
+                          <td>Number of Strings</td>
+                          <td>4 Strings</td>
+                      </tr>
+                      <tr>
+                        <td>Colour</td>
+                        <td>Spruce Varnish and Ebony</td>
+                      </tr>
+                      <tr>
+                        <td>Condition</td>
+                        <td>Brand New</td>
+                      </tr>
+                      <tr>
+                        <td>Outputs</td>
+                        <td>None</td>
+                      </tr>
+                      <tr>
+                        <td>Size</td>
+                        <td>Full Size Double Bass (4/4)</td>
+                      </tr>
+                      <tr>
+                        <td>Description</td>
+                        <td>Andreas Eastman Model 105 basses are a great balance of superior tone and stability. With a fully carved top and back and laminated ribs, Model 105 basses have a rich and powerful sound with enhanced stability. Each bass is finished with a hand-applied, shaded, antique-style varnish. These basses are great for touring musicians and school environments.</td>
+                      </tr>
+                      <tr>
+                        <td>Includes</td>
+                        <td>Bow</td>
+                      </tr>
+                      <tr>
+                        <td>Rating</td>
+                        <td><span class="badge badge-pill badge-success">99</span></td>
+                      </tr>
+                  </table>
+              </div>
+          </div>
         </div>
 
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
