Updated Piano Page
Updated Piano Page to update the include section on all the instruments

--- a/pianos.html
+++ b/pianos.html
@@ -117,7 +117,7 @@
                         </tr>
                         <tr>
                           <td>Includes</td>
-                          <td>Black Stool, and castor cups</td>
+                          <td>Piano, Black Stool, and castor cups</td>
                         </tr>
                         <tr>
                           <td>Rating</td>
@@ -171,7 +171,7 @@
                     </tr>
                     <tr>
                       <td>Includes</td>
-                      <td>Brown Stool, and castor cups</td>
+                      <td>Piano, Brown Stool, and castor cups</td>
                     </tr>
                     <tr>
                       <td>Rating</td>
@@ -225,7 +225,7 @@
                   </tr>
                   <tr>
                     <td>Includes</td>
-                    <td>Brown Stool, castor cups, and a free metronome</td>
+                    <td>Piano, Brown Stool, castor cups, and a free metronome</td>
                   </tr>
                   <tr>
                     <td>Rating</td>
@@ -278,7 +278,7 @@
                   </tr>
                   <tr>
                     <td>Includes</td>
-                    <td>Black Stool, and castor cups</td>
+                    <td>Piano, Black Stool, and castor cups</td>
                   </tr>
                   <tr>
                     <td>Rating</td>
@@ -331,7 +331,7 @@
                   </tr>
                   <tr>
                     <td>Includes</td>
-                    <td>White Stool, and castor cups</td>
+                    <td>Piano, White Stool, and castor cups</td>
                   </tr>
                   <tr>
                     <td>Rating</td>
@@ -385,7 +385,7 @@
                   </tr>
                   <tr>
                     <td>Includes</td>
-                    <td>Black Stool, and castor cups</td>
+                    <td>Piano, Black Stool, and castor cups</td>
                   </tr>
                   <tr>
                     <td>Rating</td>
@@ -438,7 +438,7 @@
                   </tr>
                   <tr>
                     <td>Includes</td>
-                    <td>White Stool, and castor cups</td>
+                    <td>Piano, White Stool, and castor cups</td>
                   </tr>
                   <tr>
                     <td>Rating</td>
@@ -491,7 +491,7 @@
                   </tr>
                   <tr>
                     <td>Includes</td>
-                    <td>Brown Stool, and castor cups</td>
+                    <td>Piano, Brown Stool, and castor cups</td>
                   </tr>
                   <tr>
                     <td>Rating</td>
@@ -544,7 +544,7 @@
                 </tr>
                 <tr>
                   <td>Includes</td>
-                  <td>Black Stool, Stand with pedals, Power Cord</td>
+                  <td>Piano, Black Stool, Stand with pedals, Power Cord</td>
                 </tr>
                 <tr>
                   <td>Outputs</td>
@@ -601,7 +601,7 @@
               </tr>
               <tr>
                 <td>Includes</td>
-                <td>Black Stool, stand, Power Cord</td>
+                <td>Piano, Black Stool, stand, Power Cord</td>
               </tr>
               <tr>
                 <td>Outputs</td>
