Updated Guitar Page
Updated Guitar Page to update the includes section

--- a/guitars.html
+++ b/guitars.html
@@ -117,7 +117,7 @@
                       </tr>
                       <tr>
                         <td>Includes</td>
-                        <td>Wammy Bar, Strap</td>
+                        <td>Guitar, Wammy Bar, Strap</td>
                       </tr>
                       <tr>
                         <td>Rating</td>
@@ -170,7 +170,7 @@
                     </tr>
                     <tr>
                       <td>Includes</td>
-                      <td>Strap</td>
+                      <td>Guitar and Strap</td>
                     </tr>
                     <tr>
                       <td>Rating</td>
@@ -223,7 +223,7 @@
                   </tr>
                   <tr>
                     <td>Includes</td>
-                    <td>Wammy Bar, Strap</td>
+                    <td>Guitar, Wammy Bar, Strap</td>
                   </tr>
                   <tr>
                     <td>Rating</td>
@@ -277,7 +277,7 @@
                 </tr>
                 <tr>
                   <td>Includes</td>
-                  <td>Strap</td>
+                  <td>Guitar and Strap</td>
                 </tr>
                 <tr>
                   <td>Rating</td>
@@ -330,7 +330,7 @@
               </tr>
               <tr>
                 <td>Includes</td>
-                <td>Strap</td>
+                <td>Guitar and Strap</td>
               </tr>
               <tr>
                 <td>Rating</td>
@@ -383,7 +383,7 @@
               </tr>
               <tr>
                 <td>Includes</td>
-                <td>Strap</td>
+                <td>Guitar and Strap</td>
               </tr>
               <tr>
                 <td>Rating</td>
@@ -436,7 +436,7 @@
               </tr>
               <tr>
                 <td>Includes</td>
-                <td>Strap</td>
+                <td>Guitar and Strap</td>
               </tr>
               <tr>
                 <td>Rating</td>
@@ -489,7 +489,7 @@
               </tr>
               <tr>
                 <td>Includes</td>
-                <td>Strap</td>
+                <td>Guitar and Strap</td>
               </tr>
               <tr>
                 <td>Rating</td>
@@ -542,7 +542,7 @@
               </tr>
               <tr>
                 <td>Includes</td>
-                <td>Power Cord, Guitar Lead</td>
+                <td>Amplifier, Power Cord, Guitar Lead</td>
               </tr>
               <tr>
                 <td>Rating</td>
