Updated Bass Page
Updated Bass Page to update the includes section

--- a/basses.html
+++ b/basses.html
@@ -117,7 +117,7 @@
                       </tr>
                       <tr>
                         <td>Includes</td>
-                        <td>Power Cord, Guitar Lead</td>
+                        <td>Amplifier, Power Cord, Guitar Lead</td>
                       </tr>
                       <tr>
                         <td>Rating</td>
@@ -170,7 +170,7 @@
                       </tr>
                       <tr>
                         <td>Includes</td>
-                        <td>Strap</td>
+                        <td>Bass Guitar and Strap</td>
                       </tr>
                       <tr>
                         <td>Rating</td>
@@ -223,7 +223,7 @@
                       </tr>
                       <tr>
                         <td>Includes</td>
-                        <td>Strap</td>
+                        <td>Bass Guitar and Strap</td>
                       </tr>
                       <tr>
                         <td>Rating</td>
@@ -276,7 +276,7 @@
                       </tr>
                       <tr>
                         <td>Includes</td>
-                        <td>Strap</td>
+                        <td>Bass Guitar and Strap</td>
                       </tr>
                       <tr>
                         <td>Rating</td>
@@ -329,7 +329,7 @@
                       </tr>
                       <tr>
                         <td>Includes</td>
-                        <td>Bow</td>
+                        <td>Double Bass, Bow, and Rosin</td>
                       </tr>
                       <tr>
                         <td>Rating</td>
