Updated Index Page
Updated Index Page to change guitars we offer

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                       <img class="card-img-top" src="images/image_processing_index_page/guitar.jpg" alt="Guitar Page">
                       <div class="card-body">
                           <h2>Guitars</h2>
-                          <h3>Eletrics and Accoustics</h3>
+                          <h3>Electrics, Accoustics and Amplifiers</h3>
                           <p>Explore our range of Epiphone, Aria, Fender, and Dangelico </p>
                           <a href="guitars.html" class="btn btn-primary">Expore our range</a>
                       </div>
